--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
                 </ul>
             </div>
         </div>
+        <footer>
+            contacts: +38(068)-233-23-72
+        </footer>
     </div>
 </body>
 </html>
