--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
         </div>
         <footer>
-            contacts: +38(068)-233-23-72
+            <span style="margin-right: 100px; display: inline-block">contacts: +38(068)-233-23-72</span><span style="display: inline-block">Developed by VI</span> 
         </footer>
     </div>
 </body>
